--- a/package.json
+++ b/package.json
@@ -11,27 +11,30 @@
     "cdk": "cdk"
   },
   "devDependencies": {
-    "@aws-cdk/assert": "1.128.0",
+    "@aws-cdk/assert": "1.129.0",
     "@types/jest": "^26.0.10",
     "@types/node": "10.17.27",
     "jest": "^26.4.2",
     "ts-jest": "^26.2.0",
-    "aws-cdk": "1.128.0",
+    "aws-cdk": "1.129.0",
     "ts-node": "^9.0.0",
     "typescript": "~3.9.7"
   },
   "dependencies": {
-    "@aws-cdk/aws-codebuild": "^1.128.0",
-    "@aws-cdk/aws-codepipeline": "^1.128.0",
-    "@aws-cdk/aws-codepipeline-actions": "^1.128.0",
-    "@aws-cdk/aws-ec2": "^1.128.0",
-    "@aws-cdk/aws-ecr": "^1.128.0",
-    "@aws-cdk/aws-ecs": "^1.128.0",
-    "@aws-cdk/aws-ecs-patterns": "^1.128.0",
-    "@aws-cdk/aws-events": "^1.128.0",
-    "@aws-cdk/aws-events-targets": "^1.128.0",
-    "@aws-cdk/aws-iam": "^1.128.0",
-    "@aws-cdk/core": "1.128.0",
+    "@aws-cdk/aws-codebuild": "^1.129.0",
+    "@aws-cdk/aws-codepipeline": "^1.129.0",
+    "@aws-cdk/aws-codepipeline-actions": "^1.129.0",
+    "@aws-cdk/aws-ec2": "^1.129.0",
+    "@aws-cdk/aws-ecr": "^1.129.0",
+    "@aws-cdk/aws-ecr-assets": "^1.129.0",
+    "@aws-cdk/aws-ecs": "^1.129.0",
+    "@aws-cdk/aws-ecs-patterns": "^1.129.0",
+    "@aws-cdk/aws-events": "^1.129.0",
+    "@aws-cdk/aws-events-targets": "^1.129.0",
+    "@aws-cdk/aws-iam": "^1.129.0",
+    "@aws-cdk/core": "1.129.0",
+    "@aws-cdk/pipelines": "^1.129.0",
+    "cdk-ecr-deployment": "0.0.80",
     "source-map-support": "^0.5.16"
   }
 }
